7-ой спринт коммит 1: создание метода save() и loadFromFile().